# auditpal

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  pyproject.toml
components/: __init__.py  chat.py  sidebar.py  sources.py  templates.py
scripts/: deploy.sh
services/: __init__.py  notebook.py
utils/: __init__.py  export.py
